--- a/src/pages/page.css
+++ b/src/pages/page.css
@@ -32,7 +32,7 @@
     text-align: center;
     width: 185px;
     height: 65px;
-    color: white;
+    color: white; 
     background-color: black;
     cursor: pointer;
 }
@@ -218,6 +218,10 @@
     color: white;
     padding-top: 8px;
     padding-bottom: 8px;
+}
+
+.single_button:hover {
+    background-color: #f40d66;
 }
 
 .button
